--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jiao-cli-dev/core",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "> TODO: description",
   "author": "jiaodashi <1500983162@qq.com>",
   "homepage": "",
@@ -17,7 +17,7 @@
     "test": "node ./__tests__/core.test.js"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "@jiao-cli-dev/utils": "^1.0.0"
+    "@jiao-cli-dev/utils": "^1.1.0",
+    "lodash": "^4.17.21"
   }
 }
