--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,12 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
+  "command": {
+    "publish": {
+      "message": "chore(release): publish",
+      "registry": "https://www.npmjs.com/"
+    }
+  },
   "version": "1.4.0"
 }
