--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,6 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "packages": [
-    "packages/*"
-  ],
-  "command": {
-    "publish": {
-      "message": "chore(release): publish",
-      "registry": "https://www.npmjs.com/"
-    }
-  },
+  "packages": ["packages/*"],
   "version": "1.5.0"
 }
