--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "packages": ["packages/*"],
-  "version": "1.5.0"
+  "packages": [
+    "packages/*"
+  ],
+  "version": "1.6.0"
 }
