--- a/utils/get-npm-info/package.json
+++ b/utils/get-npm-info/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@jiao-cli-dev/commands",
-  "version": "0.5.0",
+  "name": "@imooc-cli-dev/get-npm-info",
+  "version": "1.0.4",
   "description": "> TODO: description",
   "author": "jiaodashi <1500983162@qq.com>",
   "homepage": "https://github.com/jqmily0123/jiao-cli-dev#readme",
   "license": "ISC",
-  "main": "lib/commands.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,13 +18,14 @@
     "url": "git+https://github.com/jqmily0123/jiao-cli-dev.git"
   },
   "scripts": {
-    "test": "node ./__tests__/commands.test.js"
+    "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
     "url": "https://github.com/jqmily0123/jiao-cli-dev/issues"
   },
-  "gitHead": "cf55815443ea8d87b4660558fbc4c821d96e99b5",
-  "publishConfig": {
-    "access": "public"
+  "dependencies": {
+    "axios": "^0.21.0",
+    "semver": "^7.3.4",
+    "url-join": "^4.0.1"
   }
 }
