--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,18 +6,12 @@
   "configurations": [
     {
       "name": "Launch Program",
-      "program": "${workspaceFolder}/cli.ts",
+      "program": "${workspaceFolder}/core/cli",
       "request": "launch",
       "skipFiles": ["<node_internals>/**"],
-      "type": "node"
-    },
-    {
       "type": "node",
-      "request": "launch",
-      "name": "启动程序",
-      "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/lerna-main/lerna-main/packages/lerna/src/cli.ts",
-      "outFiles": ["${workspaceFolder}/**/*.js"]
+      "cwd": "${workspaceFolder}",
+      "console": "internalConsole"
     }
   ]
 }
