--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -5,10 +5,13 @@
   "author": "jiaodashi <1500983162@qq.com>",
   "homepage": "https://github.com/jqmily0123/jiao-cli-dev#readme",
   "license": "ISC",
-  "main": "cli/index.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
+  },
+  "bin": {
+    "jiao-cli": "bin/index.js"
   },
   "files": [
     "lib"
@@ -27,9 +30,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@imooc-cli-dev/log": "file:../utils/log",
-    "@imooc-cli-dev/utils": "file:../utils",
-    "@imooc-cli-dev/get-npm-info": "file:../utils/get-npm-info",
+    "@jiao-cli-dev/log": "file:../../utils/log",
+    "@jiao-cli-dev/utils": "file:../../utils",
+    "@jiao-cli-dev/get-npm-info": "file:../../utils/get-npm-info",
+    "@jiao-cli-dev/init": "file:../../commands/init",
+    "@jiao-cli-dev/exec": "file:../exec",
     "colors": "^1.4.0",
     "commander": "^6.2.1",
     "dotenv": "^8.2.0",
