--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lerna": "^6.6.1"
+    "lerna": "^3.22.1",
+    "node": "^19.8.1"
   },
   "publishConfig": {
     "access": "public"
