增加创建项目功能

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,20 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Program123",
+      "program": "${workspaceFolder}/app.js",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node"
+    },
+    {
       "name": "Launch Program",
       "program": "${workspaceFolder}/core/cli",
       "request": "launch",
       "skipFiles": ["<node_internals>/**"],
       "type": "node",
       "cwd": "${workspaceFolder}",
-      "console": "internalConsole"
+      "console": "integratedTerminal"
     }
   ]
 }
