--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -27,6 +27,15 @@
     "url": "https://github.com/jqmily0123/jiao-cli-dev/issues"
   },
   "dependencies": {
-    "@jiao-cli-dev/command": "file:../../models/command"
+    "@jiao-cli-dev/command": "file:../../models/command",
+    "@jiao-cli-dev/log": "file:../../utils/log",
+    "ejs": "^3.1.5",
+    "fs-extra": "^9.0.1",
+    "glob": "^7.1.6",
+    "inquirer": "^7.3.3",
+    "kebab-case": "^1.0.0",
+    "semver": "^7.3.4",
+    "spinner": "^0.3.4",
+    "user-home": "^2.0.0"
   }
 }
