--- a/models/command/package.json
+++ b/models/command/package.json
@@ -25,5 +25,10 @@
   },
   "bugs": {
     "url": "https://github.com/jqmily0123/jiao-cli-dev/issues"
+  },
+  "dependencies": {
+    "@imooc-cli-dev/log": "file:../../utils/log",
+    "colors": "^1.4.0",
+    "semver": "^7.5.0"
   }
 }
